--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -11,6 +11,11 @@
 	font-weight: 700;
   }
 
+  .year-services{
+	font-size: 20px;
+
+}
+
 .navbar-toggler {
 	width: 32px;
 	height: 24px;
@@ -1693,6 +1698,21 @@ li {
  }
 
 
+// services
+
+   .services-flower-image-1{
+	position: absolute;
+	z-index: -999;
+	left: -300px;
+	top: -100px;
+  }
+
+  .services-flower-image-2{
+	position: absolute;
+	z-index: -999;
+	right: -150px;
+	top: 100px;
+  }
 
 
 // home 
@@ -2153,4 +2173,25 @@ font-size: 30px;
  }
 
 
+ .services-flower-image-1{
+	position: absolute;
+	z-index: -999;
+	left: 60px;
+	top: 100px;
+  }
+
+  .services-flower-image-2{
+	position: absolute;
+	z-index: -999;
+	right: 50px;
+	top: -105px;
+	opacity: 0.4 !important;
+  }
+
+  .year-services{
+	text-align: center;
+	
 }
+
+}
+
