changes for 404 page content

--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -7061,7 +7061,7 @@ body .theme-btn-eighteen:hover:before {
 }
 /*^^^^^^^^^^^^^^^^^^^^^ Error Page ^^^^^^^^^^^^^^^^^^^^^^^^*/
 .error-page {
-  background: #232132;
+  background: #78413d;
   min-height: 100vh;
   padding: 185px 10% 50px;
   position: relative;
@@ -7069,7 +7069,7 @@ body .theme-btn-eighteen:hover:before {
 }
 .error-page h6 {
   font-size: 24px;
-  color: rgba(255, 255, 255, 0.3);
+  color: rgb(245 134 53);
   letter-spacing: 5px;
 }
 .error-page h1 {
