--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13569,3 +13569,13 @@ border-bottom: 1px solid  #ffead9 !important;  }
   color: #f58635; /* Set the color to red for active links */
 }
 
+h2.wp-block-post-title{padding-bottom: 20px;
+  color: #525252;
+  font-family: "archerpromedium";
+  margin: 0px;}
+  .wp-block-post-excerpt p{color: #525252;
+    font-weight: 500;
+    font-family: "archerpromedium";
+    margin: 0px;
+    font-size: 18px;
+    padding-bottom: 30px;}
