--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13579,3 +13579,7 @@ h2.wp-block-post-title{padding-bottom: 20px;
     margin: 0px;
     font-size: 18px;
     padding-bottom: 30px;}
+    .elementor-testimonial-name{margin: 0px;
+      padding-top: 25px;
+      font-family: "archerpromedium";
+      font-size: 18px;}
