--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13425,17 +13425,26 @@ color: white;
 // life in gyanodhayam sidemenu line 
 
 // course menu side line
-.services-line{
+// .services-line{
+//   position: absolute;
+//     width: 50px;
+//     height: 1px;
+//     background-color: #de6a10;
+//     top: 89.5%;
+//     right: unset;
+//     left: -60px;
+//     transition: .3s;
+// }
+.services-line-gyanodhayam{
   position: absolute;
-    width: 50px;
-    height: 1px;
-    background-color: #de6a10;
-    top: 89.5%;
-    right: unset;
-    left: -60px;
-    transition: .3s;
+  width: 50px;
+  height: 1px;
+  background-color: #de6a10;
+  top: 14.5%;
+  right: unset;
+  left: -60px;
+  transition: .3s;
 }
-
 .specialDays-line{
   position: absolute;
   width: 50px;
