--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13592,3 +13592,7 @@ h2.wp-block-post-title{padding-bottom: 20px;
       padding-top: 25px;
       font-family: "archerpromedium";
       font-size: 18px;}
+    .elementor-element{background: #f9f9f9; }
+    .elementor-widget-container{margin:15px 0px; }
+    .elementor-widget-container h3{margin-top:25px; padding: 0px; border-bottom: 3px solid #fff6f0; }
+    .gallery-item img{border-radius: 5px; border:1px solid #f58635; padding: 3px;}
