--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1479,7 +1479,8 @@ li {
 
 .first-sem-list {
   font-family: "archerpromedium";
-  padding: 0px;
+  padding: 0px 0px 0px 20px;
+
 }
 
 .first-sem-content {
