--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1154,6 +1154,7 @@
   width: 100%;
   padding-left: 5px;
   font-family: "archerpromedium";
+  background: rgb(248 225 207 / 15%);
 }
 
 .footer-submit {
