--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13836,6 +13836,6 @@ h2.wp-block-post-title {
       font-size: 18px;}
      .elementor-widget-container{margin:15px 0px; }
     .gallery-item img{border-radius: 5px; border:1px solid #f58635; padding: 3px;}
-    .elementor-widget-container h3{font-size:24px;padding-bottom: 10px;
-      color: #525252;border-bottom: 3px solid #fff6f0; 
-      font-family: "archerpromedium";}
+    .elementor-widget-container h3{font-size:24px;padding-bottom: 5px;
+      color: #525252;border-bottom: 3px solid #fff6f0; font-style: normal;
+      font-family: "archerpromedium"; margin-top:20px;}
