--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -436,78 +436,90 @@
 
   @media (max-width: 2000px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -330px;
+      left: -291px;
     }
   }
 
   @media (max-width: 1920px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -317px;
+      left: -279px;
     }
   }
   @media (max-width: 1900px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -314px;
+      left: -276px;
     }
   }
   @media (max-width: 1850px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -305px;
+      left: -269px;
     }
   }
   @media (max-width: 1800px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -297px;
+      left: -262px;
     }
   }
 
   @media (max-width: 1750px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -289px;
+      left: -255px;
     }
   }
   @media (max-width: 1700px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -280px;
+      left: -248px;
     }
   }
   @media (max-width: 1650px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -272px;
+      left: -241px;
     }
   }
   @media (max-width: 1600px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -265px;
+      left: -233px;
     }
   }
   @media (max-width: 1540px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -254px;
+      left: -225px;
+    }
+  }
+
+  @media (max-width: 1500px) {
+    .navbar .mega-dropdown-founder .dropdown-menu {
+      left: -219px;
     }
   }
 
   @media (max-width: 1440px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -237px;
+      left: -211px;
     }
   }
 
   @media (max-width: 1366px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -197px;
+      left: -172px;
     }
   }
 
   @media (max-width: 1280px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -183px;
+      left: -160px;
     }
   }
 
   @media (max-width: 1024px) {
     .navbar .mega-dropdown-founder .dropdown-menu {
-      left: -129px;
+      left: -111px;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .navbar .mega-dropdown-founder .dropdown-menu {
+      left: -107px;
     }
   }
 
@@ -520,78 +532,90 @@
 
   @media (max-width: 2000px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -610px;
+      left: -531px;
     }
   }
 
   @media (max-width: 1920px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -584px;
+      left: -508px;
     }
   }
   @media (max-width: 1900px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -577px;
+      left: -503px;
     }
   }
   @media (max-width: 1850px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -560px;
+      left: -488px;
     }
   }
   @media (max-width: 1800px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -544px;
+      left: -474px;
     }
   }
   @media (max-width: 1750px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -527px;
+      left: -460px;
     }
   }
   @media (max-width: 1700px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -510px;
+      left: -446px;
     }
   }
   @media (max-width: 1650px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -494px;
+      left: -431px;
     }
   }
   @media (max-width: 1600px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -476px;
+      left: -417px;
     }
   }
 
   @media (max-width: 1540px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -457px;
+      left: -400px;
+    }
+  }
+
+  @media (max-width: 1500px) {
+    .navbar .mega-dropdown-courses .dropdown-menu {
+      left: -388px;
     }
   }
 
   @media (max-width: 1440px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -424px;
+      left: -371px;
     }
   }
 
   @media (max-width: 1366px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -374px;
+      left: -325px;
     }
   }
 
   @media (max-width: 1280px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -346px;
+      left: -300px;
     }
   }
 
   @media (max-width: 1024px) {
     .navbar .mega-dropdown-courses .dropdown-menu {
-      left: -253px;
+      left: -219px;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .navbar .mega-dropdown-courses .dropdown-menu {
+      left: -209px;
     }
   }
 
@@ -604,80 +628,92 @@
 
   @media (max-width: 2000px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -1195px;
+      left: -1274px;
     }
   }
   @media (max-width: 1920px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -1141px;
+      left: -1217px;
     }
   }
   @media (max-width: 1900px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -1128px;
+      left: -1202px;
     }
   }
   @media (max-width: 1850px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -1095px;
+      left: -1167px;
     }
   }
   @media (max-width: 1800px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -1061px;
+      left: -1131px;
     }
   }
   @media (max-width: 1750px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -1028px;
+      left: -1095px;
     }
   }
 
-  @media(max-width: 1700px) {
-	.navbar .mega-dropdown-life .dropdown-menu {
-		left: -995px;
-	}
-}
+  @media (max-width: 1700px) {
+    .navbar .mega-dropdown-life .dropdown-menu {
+      left: -1059px;
+    }
+  }
 
-@media(max-width: 1650px) {
-	.navbar .mega-dropdown-life .dropdown-menu {
-		left: -961px;
-	}
-}
+  @media (max-width: 1650px) {
+    .navbar .mega-dropdown-life .dropdown-menu {
+      left: -1024px;
+    }
+  }
 
   @media (max-width: 1600px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -927px;
+      left: -988px;
     }
   }
 
   @media (max-width: 1540px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -888px;
+      left: -945px;
+    }
+  }
+
+  @media (max-width: 1500px) {
+    .navbar .mega-dropdown-life .dropdown-menu {
+      left: -917px;
     }
   }
 
   @media (max-width: 1440px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -821px;
+      left: -874px;
     }
   }
 
   @media (max-width: 1366px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -753px;
+      left: -802px;
     }
   }
 
   @media (max-width: 1280px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -695px;
+      left: -741px;
     }
   }
 
   @media (max-width: 1024px) {
     .navbar .mega-dropdown-life .dropdown-menu {
-      left: -528px;
+      left: -562px;
+    }
+  }
+
+  @media (max-width: 992px) {
+    .navbar .mega-dropdown-life .dropdown-menu {
+      left: -539px;
     }
   }
 
@@ -1921,6 +1957,7 @@ li {
 
   .intro-title {
     margin-bottom: 30px;
+    font-size: 34px;
   }
   .hero-banner-one {
     margin-top: 50px;
