correction given by client on oct 10

--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -12,6 +12,11 @@
 .year-services {
   font-size: 20px;
 }
+.year-services a{
+  color:#f58635 !important; text-decoration: underline;}
+  .year-services a:hover{
+    color:#000 !important; text-decoration: underline;}
+
 
 .navbar-toggler {
   width: 32px;
