--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13876,3 +13876,5 @@ h2.wp-block-post-title {
   font-family: "archerpromedium";
   margin-top: 20px;
 }
+ul.linkyear li a{color:#f58635 !important; border-bottom:1px solid #fff6f6 !important;}
+ul.linkyear li a:hover{color:#000; border-bottom:0px solid #fff6f6;}
