slider package installed for calendar slider / center search option enaabled with filter option

--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -13878,3 +13878,55 @@ h2.wp-block-post-title {
 }
 ul.linkyear li a{color:#f58635 !important; border-bottom:1px solid #fff6f6 !important;}
 ul.linkyear li a:hover{color:#000; border-bottom:0px solid #fff6f6;}
+
+
+.center-input{
+  display: block;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  appearance: none;
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-radius: var(--bs-border-radius);
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.custom-arrow {
+ /* font-size: 30px;*/
+  color: white; /* Change this color to whatever suits your design */
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.5); /* Optional: Background for better visibility */
+  border-radius:100%; 
+}
+
+
+
+.slick-prev {
+  left: 10px; /* Adjust position as needed */
+}
+
+.slick-next {
+  right: 10px; /* Adjust position as needed */
+}
+
+img {
+  display: block;
+  max-width: 100%; /* Ensures image doesn't overflow */
+  height: auto; /* Keeps aspect ratio */
+}
+
+.region-header {
+  display: inline;
+  text-decoration: underline;
+  text-decoration-thickness: 2px; /* Adjust thickness of the underline */
+  text-underline-offset: 3px; /* Adjust space between the text and underline */
+  padding-top: 20px;
+}
