--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1216,7 +1216,7 @@
 .social-main {
   border-bottom: 3px solid #f8e1cf;
   padding-bottom: 30px;
-  margin: 0px 100px 0px 100px;
+  // margin: 0px 100px 0px 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
