New page terms, policy, donate and center changes

--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -2178,6 +2178,10 @@ padding:0px 30px;}
     padding-bottom: 20px;
   }
 
+  .privacy-header {
+    font-size: 32px;
+    padding-bottom: 18px;
+  }
   .full-width-navbar-header {
     font-size: 20px;
     font-family: "archerpromedium";
